# my-blogs

./: .env  .env.local  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  angular.json  index.html  index.yaml  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  watch-tailwind.sh
.github/workflows/: release_helm_charts.yml  release_image.yml
.next/: app-build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.svelte-kit/: ambient.d.ts
archived/: angular.json  tailwind.config.ts
archived/angular/: package-lock.json  package.json  pnpm-lock.yaml
archived/nextjs/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
archived/src/: dtech-mat.sass
assets/: tailwind.css
deployments/charts/: README.md
messages/: en.json  vi.json
public/: additional-sitemap.xml  ads.txt  robots.txt  sitemap.xml
public/icons/: README.md
src/: app.html  auth.ts  index.html  main.rs  middleware.ts
src/app/: app.component.html  app.component.ts  app.config.ts  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/common/: mod.rs
src/components/: blog.rs  home.rs  layout.rs  mod.rs  router.rs  wrapper.rs
src/domains/: category.ts  post.ts  tag.ts
src/graphql/: categories_query.graphql  categories_query.rs  mod.rs  schema.graphql
src/infrastructure/: graphQlClient.ts  (+1 more)
types/: next-auth.d.ts
(+295 files in other folders)
