[package]
name = "my-blogs"
version = "0.1.0"
authors = ["ドイツ <thd1152015@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
graphql_client = { version = "0.14.0", features = ["reqwest"] }
reqwest-crate = { package = "reqwest", version = ">=0.11, <0.12", features = [
  "json",
], default-features = false, optional = true }

serde = "1.0.78"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
